# Engine

./: CMakeLists.txt  TODO  imgui.ini  pch.h  resources.aps  resources.rc
SaFaTor/: Game.cpp  Particle.cpp  Particle.h  Safator.cpp  Safator.h  TODO  Tools.cpp  Tools.h
Tests/: Test.cpp  TestGame.cpp  TestGame.h
assets/shaders/: FlatColor.glsl  Texture.glsl
engine/api/openGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLGraphicsContext.cpp  OpenGLGraphicsContext.h  OpenGLRenderAPI.cpp  OpenGLRenderAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
engine/components/: Component.h
engine/components/colliders/: BoxCollider.cpp  BoxCollider.h  CircleCollider.cpp  CircleCollider.h  Collider.cpp  Collider.h  PolygonCollider.cpp  PolygonCollider.h
engine/components/physics/: PhysicsBody.cpp  PhysicsBody.h
engine/components/sprite/: Sprite.cpp  Sprite.h
engine/components/transform/: Transform2D.cpp  Transform2D.h
engine/ecs/: Components.h  DebugPhysicsDraw.cpp  DebugPhysicsDraw.h  EngineAPI.cpp  EngineAPI.h  GameObject.cpp  GameObject.h  Physics.cpp  Physics.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  ScriptableObject.h
engine/event/: Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
engine/gameObject/: GameObject.cpp  GameObject.h  GameObjectCollection.cpp  GameObjectCollection.h
engine/input/: GamePadKeys.h  Input.cpp  Input.h  KeyboardKeys.h  MouseKeys.h
engine/main/: Application.cpp  Application.h  Core.h  Engine.h  EngineExecuter.h
engine/platform/Linux/: LinuxInput.cpp  LinuxInput.h  LinuxWindow.cpp  LinuxWindow.h
engine/platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
engine/render/: Render2D.cpp  Render2D.h  RenderAPI.cpp  RenderAPI.h  RenderCommand.cpp  RenderCommand.h  RenderMiddle.cpp  RenderMiddle.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
engine/render/camera/: Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h
engine/render/elements/: Buffer.cpp  Buffer.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.cpp  GraphicsContext.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureRegion.cpp  TextureRegion.h  VertexArray.cpp  VertexArray.h
engine/render/layer/: ImGuiLayer.cpp  ImGuiLayer.h  Layer.h  LayerStack.cpp  LayerStack.h
engine/render/shapes/: PolygonShape.cpp  PolygonShape.h  Shape.cpp  Shape.h
engine/scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
engine/ui/: Ui.cpp  Ui.h
engine/util/: Clock.cpp  Clock.h  Delta.h  EngineUtil.cpp  EngineUtil.h  Logger.cpp  Logger.h  SAT  Timestep.h
engine/world/: World.cpp  World.h
engineInspector/: Inspector.cpp  Inspector.h  InspectorApplication.cpp
lib/box2d/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glfw/docs/: CONTRIBUTING.md
lib/glfw/examples/: heightmap.c
lib/glfw/include/GLFW/: glfw3.h
lib/glfw/src/: cocoa_init.m  egl_context.c  linux_joystick.c  mappings.h  win32_joystick.c  win32_platform.h
lib/glfw/tests/: triangle-vulkan.c
lib/glm/test/gtc/: gtc_bitfield.cpp
lib/imgui-docking/: imgui.h  imgui_internal.h  imgui_widgets.cpp  imstb_textedit.h  imstb_truetype.h
lib/spdlog/example/: example.cpp
lib/spdlog/include/spdlog/details/: registry.h
lib/spdlog/include/spdlog/fmt/bundled/: format.h
lib/stb/: stb_image.h
tests/stress/: Stress.cpp  StressTest.cpp  StressTest.h
